Wrote function to print questions to HTML.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <!-- Question #1 -->
     <div id="questions">
         <!-- Add click event listener to div to listen to click from child elements -->
-        <h3>Question text</h3>
-        <button data-answer="wrong-answer"></button>
-        <button data-answer="right-answer"></button>
-        <button data-answer="wrong-answer"></button>
-        <button data-answer="wrong-answer"></button>
+        <h3 id=questionText></h3>
+        <button class="answerButtons" data-answer=false></button>
+        <button class="answerButtons" data-answer=false></button>
+        <button class="answerButtons" data-answer=false></button>
+        <button class="answerButtons" data-answer=false></button>
     </div>
 <script src=assets/js/game.js></script>
 </body>
