--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- put this in CSS -->
-    <style>
-        .hide {
-            display: none;
-        }
-    </style>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <title>Ziggy Quiz</title>
 </head>
+
 <body>
     <!-- Welcome Screen -->
     <!-- add class="hide" in JS -->
-    <div id="welcome">
-        <h1>Welcome to the Ziggy Quiz!</h1>
+    <div class="welcome-card" id="welcome">
+        <h1>Welcome to The Ziggy Quiz!</h1>
         <p>How well do you know popstar David Bowie? Each incorrect answer deducts 5 seconds from the timer. Click below to begin:</p>
         <button id=startButton>START</button>
     </div>
@@ -25,15 +21,22 @@
     <h2 id="timer" style="text-align: center;"></h2>
     <div id="countdown"></div>
 
-    <!-- Question #1 -->
-    <div id="questions">
+    <!-- Question Box -->
+    <div id="questions" class="question-card hide">
         <!-- Add click event listener to div to listen to click from child elements -->
         <h3 id=questionText></h3>
-        <button class="answerButtons" data-answer=false></button>
-        <button class="answerButtons" data-answer=false></button>
-        <button class="answerButtons" data-answer=false></button>
-        <button class="answerButtons" data-answer=false></button>
+        <div class=answer-box>
+            <button class="answerButtons" data-answer=false></button>
+            <button class="answerButtons" data-answer=false></button>
+            <button class="answerButtons" data-answer=false></button>
+            <button class="answerButtons" data-answer=false></button>
+        <!-- <div class="next-button">
+            <button class="hide">NEXT</button>
+        </div> -->
+        </div> 
     </div>
+
+
 <script src=assets/js/game.js></script>
 </body>
 </html>
