Added styling to CSS file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
     <title>Ziggy Quiz</title>
 </head>
 
@@ -16,7 +17,8 @@
     <!-- add class="hide" in JS -->
     <div class="welcome-card" id="welcome">
         <h1>Welcome to The Ziggy Quiz!</h1>
-        <p>How well do you know popstar David Bowie? Each incorrect answer deducts 5 seconds from the timer. Click below to begin:</p>
+        <p>How well do you know popstar David Bowie? Each incorrect answer deducts 10 seconds from the timer. Pick the correct answer quickly to score higher!</p>
+        <p>Click below to begin:</p>
         <button id=startButton>START</button>
     </div>
     
